@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,7 +21,7 @@
  * questions.
  */
 
-/**
+/*
  * @test
  * @bug 8072480 8203814
  * @summary Check the platform classpath contains the correct elements.
@@ -31,7 +31,6 @@
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.compiler/com.sun.tools.javac.platform
  *          jdk.compiler/com.sun.tools.javac.util
- *          jdk.jdeps/com.sun.tools.classfile
  *          jdk.jdeps/com.sun.tools.javap
  * @build toolbox.ToolBox ElementStructureTest
  * @run main ElementStructureTest
@@ -93,8 +92,7 @@ import javax.tools.StandardLocation;
 import javax.tools.ToolProvider;
 
 import com.sun.source.util.JavacTask;
-import com.sun.tools.classfile.ClassFile;
-import com.sun.tools.classfile.ConstantPoolException;
+import java.lang.classfile.ClassFile;
 import com.sun.tools.javac.api.JavacTaskImpl;
 import com.sun.tools.javac.code.Symbol.CompletionFailure;
 import com.sun.tools.javac.platform.PlatformProvider;
@@ -134,10 +132,10 @@ public class ElementStructureTest {
         (byte) 0x3D, (byte) 0xC1, (byte) 0xFE, (byte) 0xCB
     };
     static final byte[] hash8 = new byte[] {
-        (byte) 0x10, (byte) 0xE6, (byte) 0xE8, (byte) 0x11,
-        (byte) 0xC8, (byte) 0x02, (byte) 0x63, (byte) 0x9B,
-        (byte) 0xAB, (byte) 0x11, (byte) 0x9E, (byte) 0x4F,
-        (byte) 0xFA, (byte) 0x00, (byte) 0x6D, (byte) 0x81
+        (byte) 0x07, (byte) 0xAB, (byte) 0x0A, (byte) 0x8D,
+        (byte) 0x1C, (byte) 0x44, (byte) 0x6D, (byte) 0x71,
+        (byte) 0x07, (byte) 0x53, (byte) 0x59, (byte) 0x74,
+        (byte) 0x5B, (byte) 0x49, (byte) 0x60, (byte) 0xAD
     };
 
     final static Map<String, byte[]> version2Hash = new HashMap<>();
@@ -213,14 +211,11 @@ public class ElementStructureTest {
                         return;
                     StringBuilder targetPattern;
                     switch (line.charAt(0)) {
-                        case '+':
-                            targetPattern = acceptPattern;
-                            break;
-                        case '-':
-                            targetPattern = rejectPattern;
-                            break;
-                        default:
-                            return ;
+                        case '+' -> targetPattern = acceptPattern;
+                        case '-' -> targetPattern = rejectPattern;
+                        default -> {
+                            return;
+                        }
                     }
                     line = line.substring(1);
                     if (line.endsWith("/")) {
@@ -256,7 +251,7 @@ public class ElementStructureTest {
 
     void run(Writer output, String version) throws Exception {
         List<String> options = Arrays.asList("--release", version, "-classpath", "");
-        List<ToolBox.JavaSource> files = Arrays.asList(new ToolBox.JavaSource("Test", ""));
+        List<ToolBox.JavaSource> files = List.of(new ToolBox.JavaSource("Test", ""));
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         JavacTaskImpl task = (JavacTaskImpl) compiler.getTask(null, null, null, options, null, files);
 
@@ -288,10 +283,10 @@ public class ElementStructureTest {
                 }
                 JavaFileObject file = new ByteArrayJavaFileObject(data.toByteArray());
                 try (InputStream in = new ByteArrayInputStream(data.toByteArray())) {
-                    String name = ClassFile.read(in).getName().replace("/", ".");
+                    String name = ClassFile.of().parse(in.readAllBytes()).thisClass().name().stringValue().replace("/", ".");
                     className2File.put(name, file);
                     file2ClassName.put(file, name);
-                } catch (IOException | ConstantPoolException ex) {
+                } catch (IOException ex) {
                     throw new IllegalStateException(ex);
                 }
             }
@@ -519,6 +514,8 @@ public class ElementStructureTest {
                 out.write(Double.toHexString((Double) value));
             } else if (value instanceof Float) {
                 out.write(Float.toHexString((Float) value));
+            } else if (value instanceof Character ch && Character.isSurrogate(ch)) {
+                out.write(Integer.toHexString(ch));
             } else {
                 out.write(String.valueOf(value));
             }
